--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0"
   }
 }
