--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "sinon": "^4.1.3",
-    "sinon-chai": "^2.14.0"
+    "sinon-chai": "^2.14.0",
+    "sinon-test": "^2.1.2"
   }
 }
