--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "flow": "flow"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "enzyme": "^3.2.0",
+    "jest-enzyme": "^4.0.1",
     "sinon": "^4.1.3",
-    "sinon-chai": "^2.14.0",
     "sinon-test": "^2.1.2"
   }
 }
