--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:unit": "react-scripts test --testPathPattern=\"test\\.js\"",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
