--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
