--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "jest-enzyme": "^4.0.1",
+    "jsonpath": "^1.0.0",
     "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.3",
     "sinon-test": "^2.1.2"
