--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "test": "react-scripts test --env=jsdom",
     "test:unit": "react-scripts test --testPathPattern=\"test\\.js\"",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "jest-enzyme": "^4.0.1",
     "jsonpath": "^1.0.0",
     "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.3",
     "sinon-test": "^2.1.2"
-  }
+  },
+  "homepage" : "https://htbkoo.github.io/PomodoroClockRevisitReactRedux"
 }
