--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.3",
     "sinon-test": "^2.1.2"
-  }
+  },
+  "homepage": "https://htbkoo.github.io/PomodoroClockRevisitReactRedux"
 }
