--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "jest-enzyme": "^4.0.1",
     "jsonpath": "^1.0.0",
     "redux-mock-store": "^1.4.0",
