--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "react-scripts test --env=jsdom",
     "test:unit": "react-scripts test --testPathPattern=\"test\\.js\"",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
