--- a/.hgignore
+++ b/.hgignore
@@ -5,10 +5,14 @@ syntax: glob
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# IntelliJ temporary files
+*.orig
+
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/shelf/
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
