--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "jest-enzyme": "^4.0.1",
     "jsonpath": "^1.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.4.0",
     "sinon": "^4.1.3",
     "sinon-test": "^2.1.2"
