--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flow-bin": "0.59.x",
     "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
