--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
