--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-redux-form": "^1.16.6",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
